# sentio-sdk

./: .deepsource.toml  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc  .ls-lint.yml  .npmrc  .prettierignore  .releaserc  BUILD.bazel  CLAUDE.md  CNAME  README  README.md  eslint.config.mjs  hierarchy.html  index.html  lerna.json  modules.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.cjs  release.config.js  tsconfig.cjs.json  tsconfig.json  tsconfig.mjs.json  typedoc.json
.circleci/: config.yml
.claude/: settings.json
.devcontainer/: Dockerfile  base.Dockerfile
.github/: .gitconfig  renovate.json5  semantic.yml
assets/: custom.css  hierarchy.js  highlight.css  navigation.js  search.js
classes/: ..BaseContext.html  ..BigDecimal.html  ..CorePlugin.html  ..Counter.html  ..CounterBinding.html  ..CounterNew.html  ..DatabaseSchema.html  ..EventLogger.html  ..EventLoggerBinding.html  ..EventLoggerBindingNew.html  ..EventLoggerState.html  ..Exporter.html  ..Gauge.html  ..GaugeBinding.html  ..GaugeNew.html  ..Meter.html  ..MeterNew.html  ..MetricOptions.html  ..PartitionHandlerManager.html  aptos.AptosBaseProcessor.html  aptos.AptosBindOptions.html  aptos.AptosContext.html  aptos.AptosGlobalProcessor.html  aptos.AptosModulesProcessor.html  aptos.AptosPlugin.html  aptos.AptosResourceProcessorTemplate.html  aptos.AptosResourcesContext.html  aptos.AptosResourcesProcessor.html  aptos.AptosTransactionProcessor.html  aptos.MoveCoder.html  aptos.RichAptosClient.html  aptos.RichAptosClientWithContext.html  aptos_builtin._0x1.account-1.html  aptos_builtin._0x1.account.html  aptos_builtin._0x1.account_abstraction-1.html  aptos_builtin._0x1.account_abstraction.html  aptos_builtin._0x1.aggregator_v2-1.html  aptos_builtin._0x1.aggregator_v2.html  aptos_builtin._0x1.any_-1.html  aptos_builtin._0x1.any_.html  (+348 more)
cli/: package.json  tsconfig.json
enums/: ..AddressType.html  ..AggregationType.html  ..DBRequest_DBOperator.html  ..EntityUpdateData_Operator.html  ..EventLogConfig_BasicFieldType.html  ..ExecutionConfig_HandlerOrderInsideTransaction.html  ..HandlerType.html  ..LogLevel.html  ..MetricType.html  ..MoveOwnerType.html  ..NullValue.html  ..RichValue_NullValue.html  (+6 more)
examples/wormhole/: BUILD.bazel  package.json  sentio.yaml  webpack.config.js
examples/wormhole/src/: processor.ts
examples/x2y2/: BUILD.bazel  package.json  sentio.yaml  tsconfig.json  webpack.config.js
examples/x2y2/src/: processor.test.ts  processor.ts
protos/: BUILD.bazel  processor.proto
sdk/: .eslintrc.json  .npmignore  BUILD.bazel  chains-config.json  jest.config.js  package.json  release.config.js  tsconfig.json  typedoc.json
sdk/src/: aptos-processor.ts  base-processor-template.ts  base-processor.ts  bind-options.ts  binds.ts  context.ts  contract-namer.ts  error.ts  generic-processor.ts  index.ts  loader.ts  meter.test.ts  meter.ts  numberish.test.ts  numberish.ts  processor-runner.ts  processor-state.ts  processor.ts  promise-or-value.ts  promise-or-void.ts  provider.ts  service.ts  solana-processor.ts  sui-processor.ts  test-abi-code-gen.ts  trace.ts
sdk/src/abis/: ERC20.json
sdk/src/abis/aptos/: 0x3.json
sdk/src/aptos/: api.ts  aptos-processor.ts  bind-options.ts  context.ts  index.ts  models.ts  network.ts  runtime.ts  type-registry.ts  types.test.ts  types.ts  utils.ts
sdk/src/aptos-codegen/: codegen.ts  codgen.test.ts  typegen.test.ts  typegen.ts
sdk/src/builtin/: index.ts
sdk/src/builtin/aptos/: index.ts
sdk/src/builtin/solana/: spl-token-processor.ts  wormhole-processor.ts
sdk/src/cli/: build.ts  cli.ts  config.ts  key.ts  solana-code-gen.ts  upload.ts  webpack.config.js
sdk/src/cli/commands/: login-server.ts  run-create.ts  run-login.ts
sdk/src/core/: account-processor.ts  aptos-processor.ts  base-context.ts  base-processor-template.ts  base-processor.ts  bind-options.ts  context.ts  event-tracker.ts  exporter.ts  generic-processor.test.ts  generic-processor.ts  index.ts  logger.ts  metadata.ts  meter.ts  numberish.test.ts  numberish.ts  solana-context.ts  solana-processor.ts  sui-processor.ts
sdk/src/solana-codegen/: codegen.ts
sdk/src/solana/builtin/: index.ts  spl-token-processor.ts  types.ts  wormhole-processor.ts
sdk/src/state/: processor-state.ts  state-storage.ts
sdk/src/target-ethers-sentio/: codegen.ts  functions-handler.ts  functions.ts  index.ts  tsconfig.json  view-function.ts
sdk/src/test/: aptos.test.ts  clean-test.ts  codegen.test.ts  erc20-template.test.ts  erc20-template.ts  erc20.test.ts  erc20.ts  error-capture.test.ts  generic-processor.test.ts  index.ts  metric-utils.ts  mirrorworld.ts  sentio.yaml  solana.test.ts  souffl3.ts  sui.test.ts  test-processor-server.ts  test-provider.ts  tic-tac-toe.ts  wormhole-token-bridge.ts
sdk/src/test-case/: clean-test.ts  erc20-template.test.ts  erc20-template.ts  erc20.test.ts  erc20.ts  mirrorworld.ts  solana.test.ts  wormhole-token-bridge.ts
sdk/src/test-case/abis/: erc20.json
sdk/src/test-case/abis/solana/: mirrorworld.json
sdk/src/test-case/types/: Erc20.ts  common.ts  erc20_processor.ts  game_wallet.ts  game_wallet_processor.ts  index.ts  wormhole_processor.ts
sdk/src/test-case/types/factories/: Erc20__factory.ts  index.ts
sdk/src/test/abis/: erc20.json
sdk/src/test/abis/solana/: basic_1.json
sdk/src/test/types/: game_wallet_processor.ts  wormhole_processor.ts
sdk/src/testing/: index.ts  metric-utils.ts  test-processor-server.ts  test-provider.ts
sdk/src/tests/: aptos.test.ts  codegen.test.ts  erc20-template.test.ts  erc20.test.ts  erc20.ts  error-capture.test.ts  logger.test.ts  solana.test.ts  souffl3.ts  sui.test.ts  wormhole-token-bridge.ts
sdk/src/types/: global.d.ts
sdk/src/utils/: chain.ts  chainlink-oracles-goerli.csv  chainlink-oracles.csv  chainmap.ts  conversion.ts  convert.ts  dex-price.test.ts  dex-price.ts  erc20.test.ts  erc20.ts  index.ts  price.ts  token.ts
sdk/template/: package.json
sdk/template/src/: processor.ts
sdk/templates/aptos/: package.json
sdk/templates/aptos/src/: processor.ts
sdk/templates/evm/src/: processor.ts
(+13600 files in other folders)
