load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "write_gen",
    files = {
        "packages/protos/processor.proto": "//processor/protos:proto_file",
        "packages/protos/src/processor/protos/processor.ts": "//processor/protos:processor_ts_proto_no_deprecate",
        "packages/protos/src/service/common/protos/common.ts": "//service/common/protos:protos_ts_proto",
        "packages/protos/src/google/protobuf/empty.ts": "//processor/protos:empty_ts_proto",
        "packages/protos/src/google/protobuf/struct.ts": "//processor/protos:struct_ts_proto",
        "packages/protos/src/google/protobuf/timestamp.ts": "//processor/protos:timestamp_ts_proto",
        "packages/protos/src/google/type/money.ts": "//processor/protos:money_ts_proto",
        "packages/runtime/src/gen/processor/protos/processor.ts": "//processor/protos:processor_ts_proto",
        "packages/runtime/src/gen/service/common/protos/common.ts": "//service/common/protos:protos_ts_proto",
        "packages/runtime/src/gen/google/protobuf/empty.ts": "//processor/protos:empty_ts_proto",
        "packages/runtime/src/gen/google/protobuf/struct.ts": "//processor/protos:struct_ts_proto",
        "packages/runtime/src/gen/google/protobuf/timestamp.ts": "//processor/protos:timestamp_ts_proto",
        "packages/runtime/src/gen/google/type/money.ts": "//processor/protos:money_ts_proto",
    },
    tags = ["manual"],
)
