load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:ts.bzl", "ts_proto", "ts_server_proto")

proto_library(
    name = "processor_proto",
    srcs = ["processor.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc
go_proto_library(
    name = "processor_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "sentioxyz/sentio/processor",
    proto = ":processor_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "processor",
    embed = [":processor_go_proto"],
    importpath = "sentioxyz/sentio/processor",
    visibility = ["//visibility:public"],
)

ts_server_proto(
    name = "processor_ts_proto",
    protos = [
        ":processor_proto",
    ],
    visibility = ["//visibility:public"],
)

ts_proto(
    name = "empty_ts_proto",
    protos = [
        "@com_google_protobuf//:empty_proto",
    ],
    visibility = ["//visibility:public"],
)
