#load("@processor-wormhole//webpack-cli:index.bzl", webpack = "webpack_cli")
#load("@processor-wormhole//@bazel/typescript:index.bzl", "ts_project")
#
#ts_project(
#    name = "compile",
#    srcs = glob(["**/*.ts"]),
#    source_map = True,
#    visibility = ["//visibility:public"],
#)
#
#webpack(
#    name = "bundle",
#    outs = ["lib.js"],
#    args = [
#        "-o",
#        "../../../$(@D)",  # because of chdir we need to do for webpack
#    ],
#    chdir = package_name(),
#    data = [
#       ":src",
#       ":tsconfig.json",
#       ":package.json",
#       ":webpack.config.js",
#       "@processor-wormhole//:node_modules",
#    ],
#    visibility = ["//visibility:public"],
#)
