#load("@processor-x2y2//webpack-cli:index.bzl", webpack = "webpack_cli")
#load("@processor-x2y2//@bazel/typescript:index.bzl", "ts_project")
#
#FILES = [
#    ":src",
#    ":tsconfig.json",
#    ":package.json",
#    "@processor-x2y2//:node_modules",
#]
#
#ts_project(
#    name = "compile",
#    srcs = glob(["**/*.ts"]),
#    source_map = True,
#    visibility = ["//visibility:public"],
#)
#
#webpack(
#    name = "bundle",
#    outs = ["lib.js"],
#    args = [
#        "-o",
#        "../../../$(@D)",  # because of chdir we need to do for webpack
#    ],
#    chdir = package_name(),
#    data = [
#        ":package.json",
#        ":src",
#        ":tsconfig.json",
#        ":webpack.config.js",
#        "@processor-x2y2//:node_modules",
#    ],
#    visibility = ["//visibility:public"],
#)
